--- a/hw-01/Develop/index.html
+++ b/hw-01/Develop/index.html
@@ -33,14 +33,14 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="user on laptop"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media logos on table"/>
             <h2>Social Media Marketing</h2>
             <p>
